[tool.poetry]
name = "pyaml-object"
version = "0.1.0"
description = ""
authors = ["Elyes <elyesmahjoubi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^6.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.1"
pytest-cov = "^4.1.0"
types-PyYAML ="^6.0.12.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
