[metadata]
name = PyYaml-object
version = 1.0.0
author = Elyes Mahjoubi
author_email = elyesmahjoubi@hotmail.com
description = Read your YAML files easily
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EM51641/PyYAMEL-object
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = pyyaml_object
packages = find:
python_requires = >=3.8
install_requires = pyyaml

[options.packages.find]
where = pyyaml_object
